@@ -1,5 +1,7 @@
 0.13
  - Add Value::Lexeme to Wikibase::Datatype::Struct doc.
+ - Add flag 'add' => '' to Form and Sense as information to create Form or
+   Sense.
  - Add obj2struct() and struct2obj() for main objects to
    Wikibase::Datatype::Struct.
  - Fix id in Form::obj2struct().
